--- a/motocrashes_csv.ipynb
+++ b/motocrashes_csv.ipynb
@@ -2553,6 +2553,15 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crashes2020_df.to_json(r'Path to store the exported JSON file\\File Name.json')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
